--- a/rag-cgi-startax-docker-compose.dev.yml
+++ b/rag-cgi-startax-docker-compose.dev.yml
@@ -5,7 +5,7 @@ services:
   rag-cgi-api:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     ports:
       - "8000:8000"
     volumes:
@@ -26,15 +26,6 @@ services:
       - redis_data:/data
     restart: unless-stopped
 
-  nginx:
-    image: nginx:alpine
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
-      - rag-cgi-api
-    restart: unless-stopped
 
 volumes:
   redis_data:
