--- a/docker-compose.simple.yml
+++ b/docker-compose.simple.yml
@@ -11,10 +11,10 @@ services:
     volumes:
       - ./data:/app/data
       - ./vector_db:/app/vector_db
-      - ./.env:/app/.env
+      - ./config.env.example:/app/.env
     environment:
       - ENVIRONMENT=production
-      - HF_TOKEN=${HF_TOKEN}
+      - GOOGLE_API_KEY=${GOOGLE_API_KEY}
       - VECTOR_STORE_TYPE=sklearn
     restart: unless-stopped
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000
