--- a/nginx/rag-cgi-startax.totonlionel.com.conf
+++ b/nginx/rag-cgi-startax.totonlionel.com.conf
@@ -21,13 +21,16 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-    # Proxy vers l'app FastAPI (Gunicorn/Uvicorn tourne en Docker sur port 8000)
-    location /api/ {
-        proxy_pass http://127.0.0.1:8000;   # <-- adapté pour FastAPI
+    # Proxy vers l'app RAG CGI (port 8080 qui redirige vers 8000 dans le container)
+    location / {
+        proxy_pass http://127.0.0.1:8080;   # <-- Port exposé par docker-compose
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
 
         # CORS - autoriser les requêtes cross-origin
