Feat : adding element

--- a/rag-cgi-startax-docker-compose.prod.yml
+++ b/rag-cgi-startax-docker-compose.prod.yml
@@ -10,7 +10,7 @@ services:
       - ./data:/app/data
       - vector_db_prod:/app/vector_db
     env_file:
-      - .env.prod
+      - /home/admin/.env.prod
     environment:
       - ENVIRONMENT=production
       - VECTOR_STORE_TYPE=sklearn
