--- a/requirements.simple.txt
+++ b/requirements.simple.txt
@@ -28,6 +28,10 @@ python-dotenv==1.0.0
 # Monitoring (optionnel)
 prometheus-client==0.19.0
 
+# Re-ranking avec cross-encoder - DÉSACTIVÉ (trop lourd, nécessite PyTorch)
+# sentence-transformers==2.2.2
+# Note: Le système fonctionne sans re-ranking en utilisant uniquement la similarité cosinus
+
 
 
 
