--- a/requirements.simple.txt
+++ b/requirements.simple.txt
@@ -20,6 +20,9 @@ tiktoken==0.5.1
 # Support Google AI (embeddings + génération)
 google-generativeai==0.8.3
 
+# Support OpenAI (fallback pour génération)
+openai==1.12.0
+
 # Utilitaires
 numpy==1.24.3
 pandas==2.1.3
